[package]
name = "java-lang"
description = "用于rust的java语法解析器。根据Java 23 规范实现。"
keywords = ["java","parser","ast","lang", "jvm"]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/mzdk100/java-lang.git"

[dependencies]

[dependencies.nom]
features = ["default"]
version = "8.0.0"

[dev-dependencies.anyhow]
version = "1.0.95"